--- a/Application/Home/View/AllInOne/module_xmjbxx.html
+++ b/Application/Home/View/AllInOne/module_xmjbxx.html
@@ -132,6 +132,7 @@
                         <option value="F">新加坡分公司</option>
                         <option value="G">香港分公司</option>
                     </select>
+                    {$user_fgs_name}
                 </td>
             </tr>
             <tr>
