--- a/Application/Home/View/User/login.html
+++ b/Application/Home/View/User/login.html
@@ -3,7 +3,8 @@
     <meta charset="utf-8">
     <title></title>
     <!--jquery  ui custom -->
-    <script src="__PUBLIC__/js/Lib/jquery-1.11.0.js" type="text/javascript"></script>
+    <!--<script src="__PUBLIC__/js/Lib/jquery-1.11.0.js" type="text/javascript"></script>-->
+    <script src="__PUBLIC__/js/Lib/jquery-2.1.1.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/jquery-migrate-1.2.1.js" type="text/javascript"></script>
     <!--jquery validate lib-->
     <script src="__PUBLIC__/js/Lib/validate/jquery.validate.js" type="text/javascript"></script>
