--- a/Application/Home/View/Public/header.html
+++ b/Application/Home/View/Public/header.html
@@ -21,7 +21,9 @@
         $.jgrid.useJSON = true;
     </script>
     <!--jqgrid use ui lib-->
-    <script src="__PUBLIC__/js/Lib/jqGrid/jquery.jqGrid.min.js" type="text/javascript"></script>
+
+    <!--<script src="__PUBLIC__/js/Lib/jqGrid/jquery.jqGrid.min.js" type="text/javascript"></script>-->
+    <script src="__PUBLIC__/js/Lib/jqGrid/jquery.jqGrid.src.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/jqGrid/plugins/jquery.tablednd.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/jqGrid/plugins/jquery.contextmenu.js" type="text/javascript"></script>
     <script src="__PUBLIC__/js/Lib/jqGrid/plugins/ui.multiselect.js" type="text/javascript"></script>
