add gl ht project mng privilege

--- a/Application/Home/View/AllInOne/module_xmjbxx.html
+++ b/Application/Home/View/AllInOne/module_xmjbxx.html
@@ -122,7 +122,7 @@
                 </td>
                 <td>项目实施分公司:</td>
                 <td>
-                    <select id="sc_ss_fgs" name="sc_ss_fgs"  jb_field="jb_single_save"  >
+<!--                    <select id="sc_ss_fgs" name="sc_ss_fgs"  jb_field="jb_single_save"  >
                         <option value="" selected="selected">请选择</option>
                         <option value="A">北京公司</option>
                         <option value="B">上海分公司</option>
@@ -131,7 +131,7 @@
                         <option value="E">成都办事处</option>
                         <option value="F">新加坡分公司</option>
                         <option value="G">香港分公司</option>
-                    </select>
+                    </select>-->
                     {$user_fgs_name}
                 </td>
             </tr>
