--- a/Application/Home/View/Project/projectmng.html
+++ b/Application/Home/View/Project/projectmng.html
@@ -9,7 +9,7 @@
             <br />
             当前项目ID:
             <input id="pro2user_pro_id"  type="text" name="pro2user_pro_id"  value="" readOnly="true" /><br />
-            <input id="pro2user_all_str" type="text" name="pro2user_all_str" value="" style="display:none;" />
+            <input id="pro2user_all_str" type="text" name="pro2user_all_str" value=""  />
             <div>
                 <ul id="privilegeCheckedShow" ></ul>
             </div>
