--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -40,7 +40,7 @@
 <br>
 <div id="AllInOneDetail">
     <include file="AllInOne/module_xmjbxx" />
-    <include file="AllInOne/module_dxmgl" />
+    <include file="AllInOne/module_khbyd" />
 </div>
 
 
