--- a/Application/Home/View/AllInOne/module_khbyd.html
+++ b/Application/Home/View/AllInOne/module_khbyd.html
@@ -2,40 +2,96 @@
     $(document).ready(function() {
         function calcMydNum(name){
             var all = 0;
-            var over_c = 0;
-            $(".module [jb_myd_select=" + name).each(function(){
+            var over_b = 0;
+            $("#module_khbyd [jb_myd_select=" + name).each(function(){
                 var cur = $(this).val();
-                if(cur == "A" || cur == "B" || cur == "C"){
-                    over_c++;
+                if(cur == "A" || cur == "B"){
+                    over_b++;
                 }
                 all++;
             });
-            //alert("all=" + all);
-            //alert("over_c=" + over_c);
-            var rate = (over_c/all)*100 + "%";
+            var rate = Math.round((over_b/all) * 10000)/100 + "%";
             $("#" + name + "_rate_all").text(rate);
         }
 
-        $(".module [jb_myd_select]").on('change',function(e){
+        $("#module_khbyd [jb_myd_select]").on('change',function(e){
             var attr = $(this).attr("jb_myd_select");
             calcMydNum(attr);
         });
-
+        calcMydNum("qq");
         calcMydNum("sj");
         calcMydNum("sg");
         calcMydNum("sh");
 
-        document.getElementById("sh_sh_myd_1_desc").style.height = document.getElementById("sh_sh_myd_1_desc").scrollHeight + 1 + 'px';
+
     });
 </script>
 <div id="module_khbyd"  class="module">
     <h3><a href="#">客户满意度管理</a></h3>
     <div>
+        <table jb_table="bordered">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>满意度</th>
+                    <th>说明</th>
+                </tr>
+                <tr>
+                    <td>总体服务满意度</td>
+                    <td>
+                        <select id="sc_zt_myd" name="sc_zt_myd"  jb_field="jb_single_save" >
+                            <option value="" selected="selected">请选择</option>
+                            <option value="A">非常满意</option>
+                            <option value="B">满意</option>
+                            <option value="C">基本满意</option>
+                            <option value="D">不太满意</option>
+                            <option value="E">不满意</option>
+                        </select>
+                    </td>
+                    <td>
+                        <textarea id="sc_zt_myd_desc" name="sc_zt_myd_desc"  jb_field="jb_single_save" ></textarea>
+                    </td>
+                </tr>
+                <tr>
+                    <td>售后总体维修服务满意度</td>
+                    <td>
+                        <select id="sh_zt_myd" name="sh_zt_myd"  jb_field="jb_single_save" >
+                            <option value="" selected="selected">请选择</option>
+                            <option value="A">优</option>
+                            <option value="B">良</option>
+                            <option value="C">一般</option>
+                            <option value="D">差</option>
+                            <option value="E">劣</option>
+                        </select>
+                    </td>
+                    <td>
+                        <textarea id="sh_zt_myd_desc" name="sh_zt_myd_desc"  jb_field="jb_single_save" ></textarea>
+                    </td>
+                </tr>
+                <tr>
+                    <td>总体之工程表现评估为</td>
+                    <td>
+                        <select id="sh_zt_gc_myd" name="sh_zt_gc_myd"  jb_field="jb_single_save" >
+                            <option value="" selected="selected">请选择</option>
+                            <option value="A">优</option>
+                            <option value="B">良</option>
+                            <option value="C">一般</option>
+                            <option value="D">差</option>
+                            <option value="E">劣</option>
+                        </select>
+                    </td>
+                    <td>
+                        <textarea id="sh_zt_gc_myd_desc" name="sh_zt_gc_myd_desc"  jb_field="jb_single_save" ></textarea>
+                    </td>
+                </tr>
+            </thead>
+        </table>
+        <br>
         <volist name="myd_list" id="vo" >
         <table jb_table="bordered">
             <thead>
                 <tr>
-                    <th>{$vo.name}平均值</th>
+                    <th>{$vo.name}满意度平均值</th>
                     <th><span id="{$vo.sx}_rate_all"></span></th>
                     <th></th>
                 </tr>
@@ -46,9 +102,27 @@
                 </tr>
             </thead>
             <volist name="vo['item']" id="sub">
+                <if condition="$vo.sx eq qq ">
+                    <tr>
+                        <td>{$key}. {$sub}</td>
+                        <td>
+                            <select id="sc_qq_myd_{$key}" name="sc_qq_myd_{$key}"  jb_myd_select="qq" jb_field="jb_single_save" >
+                                <option value="" selected="selected">请选择</option>
+                                <option value="A">非常满意</option>
+                                <option value="B">满意</option>
+                                <option value="C">基本满意</option>
+                                <option value="D">不太满意</option>
+                                <option value="E">不满意</option>
+                            </select>
+                        </td>
+                        <td>
+                            <textarea id="sc_qq_myd_{$key}_desc" name="sc_qq_myd_{$key}_desc"  jb_field="jb_single_save" ></textarea>
+                        </td>
+                    </tr>
+                </if>
                 <if condition="$vo.sx eq sj ">
                     <tr>
-                        <td>{$sub}</td>
+                        <td>{$key}. {$sub}</td>
                         <td>
                             <select id="sc_sj_myd_{$key}" name="sc_sj_myd_{$key}"  jb_myd_select="sj" jb_field="jb_single_save" >
                                 <option value="" selected="selected">请选择</option>
@@ -66,7 +140,7 @@
                 </if>
                 <if condition="$vo.sx eq sg ">
                     <tr>
-                        <td>{$sub}</td>
+                        <td>{$key}. {$sub}</td>
                         <td>
                             <select id="sc_sg_myd_{$key}" name="sc_sg_myd_{$key}"  jb_myd_select="sg" jb_field="jb_single_save" >
                                 <option value="" selected="selected">请选择</option>
@@ -84,19 +158,19 @@
                 </if>
                 <if condition="$vo.sx eq sh ">
                     <tr>
-                        <td>{$sub}</td>
+                        <td>{$key}. {$sub}</td>
                         <td>
-                            <select id="sh_sh_myd_{$key}" name="sh_sh_myd_{$key}"  jb_myd_select="sh" jb_field="jb_single_save" >
+                            <select id="sh_{$vo.lx}_myd_{$key}" name="sh_{$vo.lx}_myd_{$key}"  jb_myd_select="{$vo.lx}" jb_field="jb_single_save" >
                                 <option value="" selected="selected">请选择</option>
-                                <option value="A">非常满意</option>
-                                <option value="B">满意</option>
-                                <option value="C">基本满意</option>
-                                <option value="D">不太满意</option>
-                                <option value="E">不满意</option>
+                                <option value="A">优</option>
+                                <option value="B">良</option>
+                                <option value="C">一般</option>
+                                <option value="D">差</option>
+                                <option value="E">劣</option>
                             </select>
                         </td>
                         <td>
-                            <textarea id="sh_sh_myd_{$key}_desc" name="sh_sh_myd_{$key}_desc"  jb_field="jb_single_save"  placeholder="请输入:" maxlength="500"  onpropertychange="this.style.height = this.scrollHeight;" oninput="this.style.height = this.scrollHeight;" style="overflow:visible" ></textarea>
+                            <textarea id="sh_{$vo.lx}_myd_{$key}_desc" name="sh_{$vo.lx}_myd_{$key}_desc"  jb_field="jb_single_save"></textarea>
                         </td>
                     </tr>
                 </if>
